--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   File Name: index.html
   Date: 2/18/2024
 -->
+<!-- https://a.co/d/eCGZWpt - Fourth Wing
+https://johnathanprice.github.io/biosite/
+-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -15,7 +18,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Lora&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Satisfy&family=Lora&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper">
@@ -32,8 +35,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
-        <li><a href="reviews.html">Book Reviews</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
+        <li><a href="hobbies.html">My Hobbies</a></li>
       </ul>
     </nav>
 
@@ -73,35 +75,66 @@
 
       <div class="parallax"></div>
 
-      <div class="cdiv">
-        <h2>Last Book Read</h2>
-        <img src="images/acotar.jpg" style="float:left; width:200px; height:250px; margin: 5px 30px;" alt="A Court of Thorns and Roses book photo.">
-        <p>
-          "A Court of Thorns and Roses" is a popular fantasy novel by Sarah J. Maas. It's the first
-          book in a captivating series that blends elements of faerie lore, romance, and adventure
-          into an enchanting tale. The story follows Feyre Archeron, a young huntress who finds
-          herself entangled in the dangerous and magical world of the faeries after killing a wolf
-          in the woods. As she navigates this new realm, she discovers secrets, faces challenges,
-          and encounters unexpected allies and enemies. With its rich world-building, complex
-          characters, and gripping plot twists, "A Court of Thorns and Roses" has garnered a
-          devoted fan base and is definitely worth diving into if you enjoy immersive fantasy
-          stories with a touch of romance.
-        </p>
+      <div class="cdiv home-grid">
+
+        <div style="background-color: #F0F2E3;">
+          <h2>Last Book Read</h2>  <!-- ********************     Here I am using the details/summary tags that are not covered in the book ***********  -->
+          <details>
+            <summary><img src="images/acotar.jpg" style="max-width:200px;" alt="A Court of Thorns and Roses book photo." title="click for book details"></summary>
+            <p>
+              "A Court of Thorns and Roses" is a popular fantasy novel by Sarah J. Maas. It's the first
+              book in a captivating series that blends elements of faerie lore, romance, and adventure
+              into an enchanting tale. The story follows Feyre Archeron, a young huntress who finds
+              herself entangled in the dangerous and magical world of the faeries after killing a wolf
+              in the woods. As she navigates this new realm, she discovers secrets, faces challenges,
+              and encounters unexpected allies and enemies. With its rich world-building, complex
+              characters, and gripping plot twists, "A Court of Thorns and Roses" has garnered a
+              devoted fan base and is definitely worth diving into if you enjoy immersive fantasy
+              stories with a touch of romance.
+            </p>
+          </details>
+        </div>
+
+        <div style="background-color: #F0F2E3;">
+          <h2>Next Book Read</h2>  <!-- ********************     Here I am using the details/summary tags that are not covered in the book ***********  -->
+          <details>
+            <summary><img src="images/acomaf.jpg" style="max-width: 200px;" alt="A Court of Mist and Fury book photo." title="click for book details"></summary>
+            <p>
+              "A Court of Mist and Fury" picks up after the events of the first book in the series
+              and follows Feyre Archeron as she navigates the faerie realm of Prythian. The story
+              delves deeper into the politics, magic, and relationships of the world, with plenty
+              of twists and turns along the way. There's romance, adventure, and some serious
+              character development, especially for Feyre. Plus, the world-building is top-notch,
+              with lush descriptions that really bring the setting to life. Overall, it's a
+              captivating read that'll keep you hooked from start to finish!
+            </p>
+          </details>
+        </div>
       </div>
 
-      <div class="cdiv">
-        <h2>Next Book Read</h2>
+      <div class="cdiv home-grid">
 
-        <img src="images/acomaf.jpg" style="float:right; width:200px; height:250px; margin: 5px 30px;" alt="A Court of Mist and Fury book photo.">
-        <p>
-          "A Court of Mist and Fury" picks up after the events of the first book in the series
-          and follows Feyre Archeron as she navigates the faerie realm of Prythian. The story
-          delves deeper into the politics, magic, and relationships of the world, with plenty
-          of twists and turns along the way. There's romance, adventure, and some serious
-          character development, especially for Feyre. Plus, the world-building is top-notch,
-          with lush descriptions that really bring the setting to life. Overall, it's a
-          captivating read that'll keep you hooked from start to finish!
-        </p>
+        <div style="background-color: #E5C6C9;">
+          <h2>Books I Like</h2>
+          <ul>
+            <li><a href="https://a.co/d/hryAayh" target="_blank" rel="noopener noreferrer">Twilight</a></li>
+            <li><a href="https://a.co/d/90iT4vh" target="_blank" rel="noopener noreferrer">A Court of Thorns and Roses</a></li>
+            <li><a href="https://a.co/d/j1Rmfkc" target="_blank" rel="noopener noreferrer">Throne of Glass</a></li>
+            <li><a href="https://a.co/d/djUFZZ9" target="_blank" rel="noopener noreferrer">Fourth Wing</a></li>
+            <li><a href="https://a.co/d/adAcZR4" target="_blank" rel="noopener noreferrer">Iron Flame</a></li>
+          </ul>
+        </div>
+
+        <div style="background-color: #BEE1E7;">
+          <h2>Upcoming Reads</h2>
+          <ul>
+            <li><a href="https://a.co/d/i5gEQYp" target="_blank" rel="noopener noreferrer">Crown of Midnight</a></li>
+            <li><a href="https://a.co/d/cMugowq" target="_blank" rel="noopener noreferrer">The Housemaid is Watching</a></li>
+            <li><a href="https://a.co/d/5FcpFRQ" target="_blank" rel="noopener noreferrer">The Bell Jar</a></li>
+            <li><a href="https://a.co/d/cRshFXe" target="_blank" rel="noopener noreferrer">The Untethered Soul</a></li>
+            <li><a href="https://a.co/d/6wxkNg3" target="_blank" rel="noopener noreferrer">The Body Keeps the Score</a></li>
+          </ul>
+        </div>
       </div>
 
       <div style="height: 30px;"></div>
@@ -110,7 +143,6 @@
 
     <footer>
       <p>Copyright &copy; 2024.</p>
-      <p><a href="mailto:contact@kaitlynsbooknook.com">contact@kaitlynsbooknook.com</a></p>
     </footer>
   </div>
 </body>
