--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Lora&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Satisfy&family=Lora&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="wrapper">
@@ -32,8 +32,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
-        <li><a href="reviews.html">Book Reviews</a></li>
-        <li><a href="contact.html">Contact Me</a></li>
+        <li><a href="hobbies.html">My Hobbies</a></li>
       </ul>
     </nav>
 
@@ -51,7 +50,6 @@
 
     <footer>
       <p>Copyright &copy; 2024.</p>
-      <p><a href="mailto:contact@kaitlynsbooknook.com">contact@kaitlynsbooknook.com</a></p>
     </footer>
   </div>
 </body>
