--- a/hobbies.html
+++ b/hobbies.html
@@ -102,7 +102,7 @@
           <div>
             <figure>
               <h2>Hiking</h2>
-              <img src="images/indirect 2.jpg" alt="waterfall">
+              <img src="images/indirect2.jpg" alt="waterfall">
               <figcaption>Waterfalls are my favorite hiking adventure.</figcaption>
             </figure>
           </div>
@@ -120,6 +120,7 @@
               <h2>Games</h2>
               <img src="images/pexels-jemari-dy-5218470.jpg" alt="UNO game">
               <figcaption>I am extremely competitive when it comes to UNO.</figcaption>
+            </figure>
           </div>
 
 
